--- a/src/public/style/layout.scss
+++ b/src/public/style/layout.scss
@@ -1,12 +1,22 @@
 @import "style";
 
+// TODO: Don't use body
+body {
+	display: flex;
+	flex-direction: column;
+	height: 100dvh;
+}
+
 nav {
 	background-color: $content;
-	box-shadow: 0px 3px 15px black;
 	height: 70px;
-
+	
 	display: flex;
 	justify-content: space-between;
+
+	position: relative;
+	z-index: 999;
+	box-shadow: 0px 3px 10px gray;
 
 	.left, .right {
 		display: flex;
@@ -14,7 +24,20 @@ nav {
 		padding: 8px;
 	}
 
-	img {
-		height: 100%;
+	img { height: 100%; }
+}
+
+main {
+	display: grid;
+	grid-template-columns: 1fr 3fr 0.8fr;
+	height: 100%;
+
+	.locations, .preferences {
+		background-color: $background;
+		padding: 25px 20px;
+	}
+
+	.map {
+		background-color: magenta;
 	}
 }
