--- a/src/public/style/elements.css
+++ b/src/public/style/elements.css
@@ -19,20 +19,30 @@
 }
 
 body, html {
-  height: 100dvh;
   font-size: 1.1rem;
+  height: 100%;
 }
 
-a {
+div, section {
+  height: 100%;
+}
+
+.hidden {
+  display: none;
+}
+
+button, a {
   background-color: #fb5607;
   color: #ffffff;
+  border: none;
   text-decoration: none;
+  text-align: center;
+  font-size: 1rem;
   padding: 5px 40px;
-  margin: 10px;
   border-radius: 5px;
   transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s;
 }
-a:hover {
+button:hover, a:hover {
   background-color: #cc4403;
 }
 
@@ -47,4 +57,36 @@ input {
 }
 input:focus {
   outline: 2px solid #fb5607;
+}
+
+.establishment-card {
+  height: auto;
+  margin-top: 25px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #efefef;
+}
+.establishment-card .info {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+.establishment-card .info a {
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+}
+.establishment-card .info .star-container {
+  width: 100%;
+  background-color: #b3b0b1;
+  border-radius: 5px;
+  color: #fb5607;
+  font-size: 0.9rem;
+  white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.establishment-card .info .star-container p, .establishment-card .info .star-container i {
+  color: inherit;
 }/*# sourceMappingURL=elements.css.map */
