--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -19,6 +19,14 @@
 }
 
 body, html {
-  height: 100dvh;
   font-size: 1.1rem;
+  height: 100%;
+}
+
+div, section {
+  height: 100%;
+}
+
+.hidden {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
