--- a/src/public/style/style.scss
+++ b/src/public/style/style.scss
@@ -2,6 +2,7 @@
 // TODO: Put in another sass file
 $primary: #fb5607;
 $content: #e5e5e5;
+$dark-as-content: #b3b0b1;
 $content-secondary: #efefef;
 $text-light: #ffffff;
 $text-dark: #000000;
@@ -33,6 +34,14 @@ $border-radius: 5px;
 }
 
 body, html {
-	height: 100dvh;
 	font-size: 1.1rem;
+	height: 100%;
+}
+
+div, section {
+	height: 100%;
+}
+
+.hidden {
+	display: none;
 }
