--- a/src/public/style/layout.css
+++ b/src/public/style/layout.css
@@ -31,6 +31,13 @@ div, section {
   display: none;
 }
 
+input, textarea {
+  outline: none;
+}
+input:focus, textarea:focus {
+  outline: 2px solid #fb5607;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -56,7 +63,7 @@ nav img {
 
 main {
   display: grid;
-  grid-template-columns: 1fr 3fr 0.8fr;
+  grid-template-columns: 1.2fr 3fr 1fr;
   height: 100%;
 }
 main .locations, main .map, main .preferences {
@@ -70,6 +77,7 @@ main .locations.locations, main .locations.preferences, main .map.locations, mai
 main .locations.locations .establishments, main .map.locations .establishments, main .preferences.locations .establishments {
   flex-grow: 1;
   overflow-y: auto;
+  margin-top: 25px;
 }
 main .locations.locations .establishments .no-establishments, main .map.locations .establishments .no-establishments, main .preferences.locations .establishments .no-establishments {
   display: flex;
