--- a/src/public/style/elements.scss
+++ b/src/public/style/elements.scss
@@ -1,6 +1,6 @@
 @import "style";
 
-button, a {
+button:not(#map button), a:not(#map a) {
 	background-color: $primary;
 	color: $text-light;
 	border: none;
